refactor: add request + response DTO
